2000-09-05  JP Rosevear  <jpr@helixcode.com>

	* cal-util/cal-recur.c (cal_recur_from_icalrecurrencetype): Check
	to see if r->enddate is (time_t)-1 and set to 0 if so

2000-09-02  Ettore Perazzoli  <ettore@helixcode.com>

	* conduits/calendar/Makefile.am (INCLUDES): Add libical include
	directories and `$(BONOBO_GNOME_CFLAGS)'.
	* conduits/todo/Makefile.am (INCLUDES): Likewise.

2000-09-02  Lauris Kaplinski  <lauris@helixcode.com>

	* gui/event-editor.c: e_utf8 wrappers

	* gui/gncal-todo.c: e_utf8_wrappers
	
2000-09-02  Christopher James Lahey  <clahey@helixcode.com>

	* conduits/calendar/calendar-conduit.c,
	conduits/todo/todo-conduit.c, gui/e-week-view.c, gui/gnome-cal.c:
	Fixed some warnings.

2000-09-01  Federico Mena Quintero  <federico@helixcode.com>

	* gui/gnome-cal.c (gnome_calendar_new): Use
	gnome_calendar_construct() so that we can check for proper
	creation of the client.
	(gnome_calendar_destroy): Check that the client exists before we
	unref it.
	(gnome_calendar_construct): Do the CalClient creation here.  Bind
	the views to it here as well instead of in setup_widgets().
	(gnome_calendar_init): Call setup_widgets() here.

	* gui/e-calendar-table.c (e_calendar_table_destroy): Unref the
	model.

2000-09-01  JP Rosevear  <jpr@helixcode.com>

	* conduits/todo/todo-conduit.c: Update for new libical.
	Conduits should atleast compile now.

	* conduits/calendar/calendar-conduit.c: ditto 

	* Makefile.am: Build the conduits only when they've been
	enabled.

2000-09-01  JP Rosevear  <jpr@helixcode.com>

	* gui/event-editor.c: Make toolbar save and close button.
	We should put a similar menu option in sometime.

2000-08-31  JP Rosevear  <jpr@helixcode.com>

	* cal-util/cal-recur.c (array_to_list): Use
	ICAL_RECURRENCE_ARRAY_MAX instead of MAX_SHORT
	
2000-08-31  JP Rosevear  <jpr@helixcode.com>

	* gui/event-editor.c (file_delete_cb): Implement delete option
	(dialog_to_comp_object): Set the weekday start value and use
	local not UTC time
